--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -62,55 +62,162 @@
                             <option value="5">5 (Strongly Agree)</option>
                         </select>
                     </div>
-            
 
-            <!-- Question 2 -->
-            <div class="question2">
-                <h5>
-                    <strong>Question 2</strong>
-                </h5>
-                <h6>Generally speaking, you rely more on your experience than your imagination.</h6>
-            </div>
-            <div class="dropdown">
-                <select "custom-select">
-                    <option selected disabled>Select an option</option>
-                    <option value="1">1 (Strongly Disagree)</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5 (Strongly Agree)</option>
-                </select>
-            </div>
 
-               <!-- Question 3 -->
+                    <!-- Question 2 -->
+                    <div class="question2">
+                        <h5>
+                            <strong>Question 2</strong>
+                        </h5>
+                        <h6>Generally speaking, you rely more on your experience than your imagination.</h6>
+                    </div>
+                    <div class="dropdown">
+                        <select "custom-select">
+                            <option selected disabled>Select an option</option>
+                            <option value="1">1 (Strongly Disagree)</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5 (Strongly Agree)</option>
+                        </select>
+                    </div>
+
+                    <!-- Question 3 -->
                     <h5>
                         <strong>Question 3</strong>
                     </h5>
                     <h6>You find it easy to stay relaxed and focused even when there is some pressure.</h6>
-                <div class="dropdown">
-                    <select class="chosen-select" id="q3">
-                        <option selected disabled>Select an option</option>
-                        <option value="1">1 (Strongly Disagree)</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5 (Strongly Agree)</option>
-                    </select>
-                </div>
+                    <div class="dropdown">
+                        <select class="chosen-select" id="q3">
+                            <option selected disabled>Select an option</option>
+                            <option value="1">1 (Strongly Disagree)</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5 (Strongly Agree)</option>
+                        </select>
+                    </div>
 
+                    <!-- Question 4 -->
+                    <h5>
+                        <strong>Question 4</strong>
+                    </h5>
+                    <h6>You rarely do something just out of sheer curiosity.</h6>
+                    <div class="dropdown">
+                        <select class="chosen-select" id="q4">
+                            <option selected disabled>Select an option</option>
+                            <option value="1">1 (Strongly Disagree)</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5 (Strongly Agree)</option>
+                        </select>
+                    </div>
 
+                    <!-- Question 5 -->
+                    <h5>
+                        <strong>Question 5</strong>
+                    </h5>
+                    <h6>People can rarely upset you.</h6>
+                    <div class="dropdown">
+                        <select class="chosen-select" id="q5">
+                            <option selected disabled>Select an option</option>
+                            <option value="1">1 (Strongly Disagree)</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5 (Strongly Agree)</option>
+                        </select>
+                    </div>
 
+                    <!-- Question 6 -->
+                    <h5>
+                        <strong>Question 6</strong>
+                    </h5>
+                    <h6>It is often difficult for you to hear other people's feelings.</h6>
+                    <div class="dropdown">
+                        <select class="chosen-select" id="q6">
+                            <option selected disabled>Select an option</option>
+                            <option value="1">1 (Strongly Disagree)</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5 (Strongly Agree)</option>
+                        </select>
+                    </div>
 
+                    <!-- Question 7 -->
+                    <h5>
+                        <strong>Question 7</strong>
+                    </h5>
+                    <h6>In a discussion, truth is more important that people's sensitivities.</h6>
+                    <div class="dropdown">
+                        <select class="chosen-select" id="q7">
+                            <option selected disabled>Select an option</option>
+                            <option value="1">1 (Strongly Disagree)</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5 (Strongly Agree)</option>
+                        </select>
+                    </div>
 
+                    <!-- Question 8 -->
+                    <h5>
+                        <strong>Question 8</strong>
+                    </h5>
+                    <h6>You rarely get carried away by fantasies and ideas.</h6>
+                    <div class="dropdown">
+                        <select class="chosen-select" id="q8">
+                            <option selected disabled>Select an option</option>
+                            <option value="1">1 (Strongly Disagree)</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5 (Strongly Agree)</option>
+                        </select>
+                    </div>
 
+                    <!-- Question 9 -->
+                    <h5>
+                        <strong>Question 9</strong>
+                    </h5>
+                    <h6>You think that everyone’s views should be respected regardless of whether they are supported by facts
+                        or not.
+                    </h6>
+                    <div class="dropdown">
+                        <select class="chosen-select" id="q9">
+                            <option selected disabled>Select an option</option>
+                            <option value="1">1 (Strongly Disagree)</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5 (Strongly Agree)</option>
+                        </select>
+                    </div>
 
-
-
+                    <!-- Question 10 -->
+                    <h5>
+                        <strong>Question 10</strong>
+                    </h5>
+                    <h6>
+                        You feel more energetic after spending time with a group of people.
+                    </h6>
+                    <div class="dropdown">
+                        <select class="chosen-select" id="q10">
+                            <option selected disabled>Select an option</option>
+                            <option value="1">1 (Strongly Disagree)</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5 (Strongly Agree)</option>
+                        </select>
+                    </div>
+            </div>
         </div>
-        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
         </form>
         <hr>
-        <button type="submit" class="btn btn-primary">Submit</button>
     </div>
     </div>
     </div>
