--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -23,7 +23,7 @@
         crossorigin="anonymous">
 
     <!-- CSS Link -->
-    <!-- <link rel="stylesheet" type="text/css" href="/app/assets/style.css"> -->
+    <link rel="stylesheet" type="text/css" href="style.css">
 
     <title>Friend Finder | Survey</title>
 
@@ -51,7 +51,7 @@
                     <hr>
 
                     <!-- Question 1 -->
-                    <div class="question" style="padding-top: 5px">
+                    <div class="question">
                         <h5>
                             <strong>Question 1</strong>
                         </h5>
@@ -70,7 +70,7 @@
 
 
                     <!-- Question 2 -->
-                    <div class="question" style="padding-top: 20px">
+                    <div class="question">
                         <h5>
                             <strong>Question 2</strong>
                         </h5>
@@ -88,7 +88,7 @@
                     </div>
 
                     <!-- Question 3 -->
-                    <div class="question" style="padding-top: 20px">
+                    <div class="question">
                         <h5>
                             <strong>Question 3</strong>
                         </h5>
@@ -106,7 +106,7 @@
                     </div>
 
                     <!-- Question 4 -->
-                    <div class="question" style="padding-top: 20px">
+                    <div class="question">
                         <h5>
                             <strong>Question 4</strong>
                         </h5>
@@ -124,7 +124,7 @@
                     </div>
 
                     <!-- Question 5 -->
-                    <div class="question" style="padding-top: 20px">
+                    <div class="question">
                         <h5>
                             <strong>Question 5</strong>
                         </h5>
@@ -142,7 +142,7 @@
                     </div>
 
                     <!-- Question 6 -->
-                    <div class=question style="padding-top: 20px">
+                    <div class=question>
                         <h5>
                             <strong>Question 6</strong>
                         </h5>
@@ -160,7 +160,7 @@
                     </div>
 
                     <!-- Question 7 -->
-                    <div class=question style="padding-top: 20px">
+                    <div class=question>
                         <h5>
                             <strong>Question 7</strong>
                         </h5>
@@ -178,7 +178,7 @@
                     </div>
 
                     <!-- Question 8 -->
-                    <div class=question style="padding-top: 20px">
+                    <div class=question>
                         <h5>
                             <strong>Question 8</strong>
                         </h5>
@@ -196,7 +196,7 @@
                     </div>
 
                     <!-- Question 9 -->
-                    <div class=question style="padding-top: 20px">
+                    <div class=question>
                         <h5>
                             <strong>Question 9</strong>
                         </h5>
@@ -216,7 +216,7 @@
                     </div>
 
                     <!-- Question 10 -->
-                    <div class=question style="padding-top: 20px">
+                    <div class=question>
                         <h5>
                             <strong>Question 10</strong>
                         </h5>
@@ -240,11 +240,11 @@
         </div>
         </form>
         <hr>
-        <p>
+        <footer>
             <a href="/api/friends">API Friends List</a>
             |
             <a href="#">Git Hub Repo</a>
-        </p>
+        </footer>
     </div>
     </div>
     </div>
