--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -18,6 +18,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
         crossorigin="anonymous"></script>
 
+    <!-- Jquery Link -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
     <!-- Font Awesome  -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
         crossorigin="anonymous">
@@ -58,7 +61,7 @@
                         <h6>Your mind is always buzzing with unexplored ideas and plans.</h6>
                     </div>
                     <div class="dropdown">
-                        <select "custom-select">
+                        <select "custom-select" id="q1">
                             <option selected disabled>Select an option</option>
                             <option value="1">1 (Strongly Disagree)</option>
                             <option value="2">2</option>
@@ -77,7 +80,7 @@
                         <h6>Generally speaking, you rely more on your experience than your imagination.</h6>
                     </div>
                     <div class="dropdown">
-                        <select "custom-select">
+                        <select "custom-select" id="q2">
                             <option selected disabled>Select an option</option>
                             <option value="1">1 (Strongly Disagree)</option>
                             <option value="2">2</option>
@@ -236,7 +239,7 @@
                     </div>
 
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary" id="submit">Submit</button>
         </div>
         </form>
         <hr>
@@ -245,9 +248,60 @@
             |
             <a href="#">Git Hub Repo</a>
         </footer>
+
+        <div id="modal1" class="modal">
+            <div class="modal-content">
+                <h4>Best Friend Match</h4>
+                <div class="divider"></div>
+                <h5 id="userMatch"></h5>
+                <img id="userMatchImage" class="materialboxed" width="650" src="">
+            </div>
+            <div class="modal-footer">
+                <a href="/survey" class="modal-action modal-close waves-effect waves-green btn-flat">Find another Friend!</a>
+            </div>
+        </div>
+
+
     </div>
     </div>
     </div>
 </body>
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        //On form submission, create newFriend with user inputs
+        $("#submit").on("click", function (event) {
+            event.preventDefault();
+            var userInput = {
+                name: $("#inputName").val().trim(),
+                photo: $("#inputLink").val().trim(),
+                scores: [
+                    $("#q1").val().trim(),
+                    $("#q2").val().trim(),
+                    $("#q3").val().trim(),
+                    $("#q4").val().trim(),
+                    $("#q5").val().trim(),
+                    $("#q6").val().trim(),
+                    $("#q7").val().trim(),
+                    $("#q8").val().trim(),
+                    $("#q9").val().trim(),
+                    $("#q10").val().trim(),
+                ]
+            };
+
+
+            //Push the newFriend variable to the list of friends in friends.js
+            $.post('api/friends', newFriend)
+                .done(function (res) {
+                    $("#userMatch").html(res.matchName);
+                    $("#userMatchImage").attr("src", res.matchImage);
+
+                    //Show results with modal
+                    $("#modal").modal("open");
+                });
+        });
+    });
+    $('.modal').modal();
+</script>
 
 </html>
